# lambda-docx2pdf

./: Dockerfile  README.md  pipeline.sh
docker-image/: Dockerfile  entry.sh  pyproject.toml  test-template.docx
docker-image/app/: app.py
